src/pages/ru/v1.17.0/sdk/start.mdx
---
title: "JavaScript SDK - метод 'start'"
metaTitle: "JavaScript SDK - метод 'start'"
metaDescription: "Подробности о методе 'start' из SDK OpenReplay"
---

Этот метод используется для запуска трекера. При запуске трекера начинается запись сессии.

## Сигнатура

```js
start(startOpts?: Partial<StartOptions>): Promise<StartPromiseReturn>
```

### Параметры
Метод `start` принимает необязательный параметр, с помощью которого можно настроить различные аспекты записи:
- `userID: string`: используется для ручной установки идентификатора пользователя, чтобы отслеживать его на протяжении нескольких сессий. Это строковое значение, и оно может быть любым по вашему желанию.
- `metadata: Record<string, string>`: ручная установка значений метаданных. Подробнее об этой функции читайте в [разделе Метаданные](/installation/metadata/).
- `forceNew: boolean`: используется для принудительного создания новой сессии после перезагрузки страницы. По умолчанию установлено значение `false`, поэтому после перезагрузки сессия сохраняется.
- `sessionHash: string`: используется для постоянных (sticky) сессий. Полезно, если у вас многосайтовое приложение или если вам нужно перенаправить пользователя за пределы сайта, а затем обратно на него (например, на платёжный шлюз).

### Возвращаемое значение

После запуска метод вернёт промис с объектом информации о сессии, содержащим:
- `sessionID: string`: Строковое значение, представляющее идентификатор запущенной сессии.
Запускает трекер (и процесс записи), затем возвращает промис с информацией о сессии (sessionID, sessionHash, userUUID).


