src/pages/ru/v1.18.0/sdk/start.mdx
---
title: "JavaScript SDK - метод 'start'"
metaTitle: "JavaScript SDK - метод 'start'"
metaDescription: "Подробности о методе 'start' из SDK OpenReplay"
---

Этот метод используется для запуска трекера. С запуском трекера начинается запись сессии.

## Сигнатура

```js
start(startOpts?: Partial<StartOptions>): Promise<StartPromiseReturn>
```

### Параметры
Метод `start` принимает необязательный параметр, с помощью которого вы можете настроить различные аспекты записи:
- `userID: string`: используется для ручной установки идентификатора пользователя, чтобы отслеживать его на протяжении нескольких сессий. Это значение типа string, и оно может быть любым.
- `metadata: Record<string, string>`: ручная установка значений метаданных. Подробнее об этой функции читайте в [разделе «Метаданные»](/installation/metadata/).
- `forceNew: boolean`: используется для принудительного создания новой сессии после обновления страницы. По умолчанию установлено значение `false`, поэтому после обновления сессия сохраняется.
- `sessionHash: string`: используется для «липких» (sticky) сессий. Полезно, если у вас многосайтовое приложение или если вам нужно перенаправить пользователя за пределы сайта, а затем обратно на него (например, на платёжный шлюз).
- `assistOnly: boolean`: запускает трекер в режиме только ассистирования (assist-only), при котором отправка данных сессии на бэкенд пропускается (функция редакции EE)

### Возвращаемое значение

После запуска метод вернёт промис с объектом информации о сессии, содержащим:
- `sessionID: string`: значение типа string, представляющее идентификатор запущенной сессии.
Запускает трекер (и процесс записи), а затем возвращает промис с информацией о сессии (sessionID, sessionHash, userUUID).


